manifests/deploy-cloudant.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudant-service
  labels:
    app: microservice-cloudant
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: microservice-cloudant
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-cloudant-deployment
  labels:
    app: microservice-cloudant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-cloudant
  template:
    metadata:
      labels:
        app: microservice-cloudant
        version: v1
    spec:
      containers:
      - name: cloudant-db
        image: ibmcom/cloudant-developer:1.0.1
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh","-c"]
        args: ["if [ ! -z $dbPassword ]; then sed -i 's/^admin.*/admin = '$dbPassword'/g' /opt/cloudant/etc/local.ini && sed -i 's/^cloudant.*/cloudant = '$dbPassword'/g' /opt/cloudant/etc/local.ini && if [ ! -a /srv/cloudant ]; then sed -i 's/172.17.0.2/127.0.0.1/g' /etc/haproxy/haproxy.cfg && cast license --silent && cast database init -v -y -p $dbPassword ; fi; exec /usr/sbin/init; fi;"]
        securityContext:
          privileged: true
        ports:
          - containerPort: 80
        volumeMounts:
        - name: cloudant-pv
          mountPath: /srv
      volumes:
        - name: cloudant-pv
          persistentVolumeClaim:
            claimName: cloudant-pv-claim
