manifests/deploy-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-core-deployment  
  labels:
    app: microservice-grafana
    component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-grafana
  template:
    metadata:
      labels:
        app: microservice-grafana
        component: core
    spec:
      containers:
      - image: grafana/grafana:4.2.0
        name: microservice-grafana
        imagePullPolicy: Always
        # env:
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
          # initialDelaySeconds: 30
          # timeoutSeconds: 1
        volumeMounts:
        - name: grafana-persistent-storage
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-persistent-storage
        emptyDir: {}
       
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service  
  labels:
    app: microservice-grafana
    component: core
spec:  
  clusterIP: None
  ports:
    - port: 3000
  selector:
    app: microservice-grafana
    component: core
---
