manifests/deploy-schedule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-schedule-deployment
  labels:
    app: microservice-schedule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-schedule
  template:
    metadata:
      labels:
        app: microservice-schedule
    spec:
      containers:
      - name: microservice-schedule
        #change the image name
        image: journeycode/microservice-metrics-schedule
        ports:
          - containerPort: 9080
        imagePullPolicy: Always 
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-schedule-service
  annotations:
    mpmetrics: 'true'
  labels:
    app: microservice-schedule
spec:
  clusterIP: None
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    app: microservice-schedule
