manifests/deploy-speaker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-speaker-sample
  labels:
    app: microprofile-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: speaker-deployment
    spec:
      containers:
      - name: microservice-speaker
        #change the image name
        image: journeycode/microservice-ol-speaker
        ports:
          - containerPort: 9080          
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: speaker-service
  annotations:
    mpmetrics: 'true'
  labels:
    app: microprofile-app
spec:
  clusterIP: None
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    name: speaker-deployment
