manifests/deploy-vote.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-vote-sample
  labels:
    app: microprofile-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: vote-deployment
    spec:
      containers:
      - name: microservice-vote
        #change the image name
        image: sanjeevghimire/microservice-ol-vote
        ports:
          - containerPort: 9080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  annotations:
    mpmetrics: 'true'
  labels:
    app: microprofile-app
spec:
  clusterIP: None
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    name: vote-deployment
