manifests/deploy-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-webapp-deployment
  labels:
    app: micorservice-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-webapp
  template:
    metadata:
      labels:
        app: microservice-webapp
    spec:
      containers:
      - name: microservice-webapp
        #change the image name
        image: journeycode/microservice-metrics-webapp
        ports:
          - containerPort: 9080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: micorservice-webapp-service
  labels:
    app: micorservice-webapp
spec:
  clusterIP: None
  ports:
    - port: 9080
      targetPort: 9080
  selector:
    app: micorservice-webapp
