manifests/deploy-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microprofile-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls: 
    - hosts:
      - stevemar-k8s-1-18-tor01-f2c6cdc6801be85fd188b09d006f13e3-0000.tor01.containers.appdomain.cloud
      secretName: stevemar-k8s-1-18-tor01-f2c6cdc6801be85fd188b09d006f13e3-0000
  rules:
  - host: stevemar-k8s-1-18-tor01-f2c6cdc6801be85fd188b09d006f13e3-0000.tor01.containers.appdomain.cloud
    http:
      paths:
      - path: /speaker
        backend:
          serviceName: speaker-service
          servicePort: 9080
      - path: /session
        backend:
          serviceName: session-service
          servicePort: 9080
      - path: /schedule
        backend:
          serviceName: schedule-service
          servicePort: 9080
      - path: /vote
        backend:
          serviceName: vote-service
          servicePort: 9080
      - path: /metrics
        backend:
          serviceName: grafana
          servicePort: 3000   
      - backend:
          serviceName: webapp-service
          servicePort: 9080
